<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/editTextEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_email_txt"
        android:gravity="center"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_your_password_txt"
        android:layout_marginBottom="10pt"
        android:gravity="center"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnRegisterAccount"
        android:layout_width="50pt"
        android:layout_height="wrap_content"
        android:background="@drawable/bu_color"
        android:layout_marginBottom="10pt"
        android:layout_marginTop="10pt"
        android:text="@string/register_txt" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="50pt"
        android:layout_height="wrap_content"
        android:background="@drawable/bu_color"
        android:text="@string/login_txt" />

</LinearLayout>